Removed non-local resources

--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-    <p>IStringLocalizer<Class1>: @ViewData["LocalizedMessage"]</p>
+    <p>IStringLocalizer (Class1): @ViewData["LocalizedMessage"]</p>
     <p>Culture: @ViewData["LocalizedMessage2"]</p>
     <p>ResourceManager: @ViewData["LocalizedMessage3"]</p>
-    <p>IStringLocalizer<LocalClass>: @ViewData["LocalizedMessage4"]</p>
+    <p>IStringLocalizer (LocalClass): @ViewData["LocalizedMessage4"]</p>
 </body>
 </html>
